tests/codegen/fail/unsupported_extern_rust_abi_build.ql
extern "rust" fn q_add(left: Int, right: Int) -> Int

fn main() -> Int {
    return q_add(1, 2)
}
