tests/codegen/fail/unsupported_extern_rust_abi_build.stderr
error: tests/codegen/fail/unsupported_extern_rust_abi_build.ql:1:15: LLVM IR backend foundation only supports `extern "c"` declarations yet
  extern "rust" fn q_add(left: Int, right: Int) -> Int
                ^^^^^^^^
